--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./js/task-01.js" type="module"></script> -->
+    <script src="./js/task-01.js" type="module"></script>
     <script src="./js/task-02.js" type="module"></script>
-    <!-- <script src="./js/task-03.js" type="module"></script> -->
-    <!-- <script src="./js/task-04.js" type="module"></script> -->
-    <!-- <script src="./js/task-05.js" type="module"></script> -->
-    <!-- <script src="./js/task-06.js" type="module"></script> -->
+    <script src="./js/task-03.js" type="module"></script>
+    <script src="./js/task-04.js" type="module"></script>
+    <script src="./js/task-05.js" type="module"></script>
+    <script src="./js/task-06.js" type="module"></script>
     <!-- <script src="./js/task-07.js" type="module"></script> -->
   </body>
 </html>
